--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
+# Trappy Systems specific
+*.h264
+*.mp4
+
+# Device specifig config
+./config/deviceid.yaml
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -159,5 +168,4 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-*.h264
-*.mp4
+
