--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # Trappy Systems specific
 *.h264
 *.mp4
+*.png
+*.jpg
 
-# Device specifig config
+# Device specific config
 *deviceid.yaml
-config/deviceid.yaml
+/config/deviceid.yaml
 
 
 # Byte-compiled / optimized / DLL files
