--- a/config/skeleton_deviceid.yaml
+++ b/config/skeleton_deviceid.yaml
@@ -1,9 +1,17 @@
 name: null
 type: null
+config:
+  autostart_cli_after_reboot: null
+  git_sync: null
+  set_wallpaper: null
+  log_level: null
+  file_server: null
+devices:
+  pico: null
+  lit: null
+  cam: null
+abstraction:
+  microscope: null
 assembly: null
 optics: null
-pico: null
-camera: null
-led: null
 frame: null
-git_sync: null
