--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -1,36 +1,28 @@
+name: Deploy Docs
 
-name: docs
 on:
   push:
-    branches:
-    - master
+    branches: [main]
 
 jobs:
-  docs:
-    name: Docs
+  deploy:
     runs-on: ubuntu-latest
     steps:
+    - uses: actions/checkout@v3
 
-    - uses: actions/checkout@v2
-
-    - name: Install Python
-      uses: actions/setup-python@v1
+    - name: Setup Python
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.8
+        python-version: 3.x
 
-    - name: Install requirements
+    - name: Install Dependencies
       run: |
-        pip3 install sphinx-rtd-theme
-    
-    - name: Build docs
+        pip install sphinx ghp-import
+
+    - name: Build Docs
       run: |
-        cd docs
         make html
-    # https://github.com/peaceiris/actions-gh-pages
-    - name: Deploy
-      if: success()
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        publish_branch: gh-pages
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: docs/_build/html/
+
+    - name: Deploy to gh-pages
+      run: |
+        ghp-import -n -p -f docs
