--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,6 @@ dependencies = [
     "confuse (>=2.0.1,<3.0.0)",
     "diagrams (>=0.24.4,<0.25.0)",
     "dill (>=0.4.0,<0.5.0)",
-    "scikit-image@^0.25.2",
     "smmap (==5.0.1)",
     "gitpython (>=3.1.45,<4.0.0)",
     "graphviz (<=0.21.0)",
@@ -54,10 +53,15 @@ dependencies = [
     "scipy (>=1.16.1,<2.0.0)",
     "textual (>=5.3.0,<6.0.0)",
     "textual-dev (>=1.7.0,<2.0.0)",
-    "watchdog (>=6.0.0,<7.0.0)"
+    "watchdog (>=6.0.0,<7.0.0)",
+    "scikit-image (>=0.25.2,<0.26.0)"
 ]
 
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[[tool.poetry.packages]]
+include = "trappyscopes"  # folder name of your package
+from = "."                 # current directory
