--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "trappyscopes"
-version = "0.1.0"
+version = "0.1.1"
 description = "Control Layer Interface for parallel microscopy system."
 authors = [
     {name = "Yatharth Bhasin",email = "yatharth1997@gmail.com"}
@@ -56,6 +56,8 @@ dependencies = [
     "watchdog (>=6.0.0,<7.0.0)",
     "pypandoc (>=1.15,<2.0)",
     "scikit-image (>=0.25.2,<0.26.0)",
+    "reportlab (>=4.4.3,<5.0.0)",
+    "html2rml (>=0.3.2,<0.4.0)",
 ]
 
 
