--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,8 @@ dependencies = [
     "scikit-image (>=0.25.2,<0.26.0)",
     "reportlab (>=4.4.3,<5.0.0)",
     "html2rml (>=0.3.2,<0.4.0)",
+    "icalendar (>=6.3.1,<7.0.0)",
+    "timeboard (>=0.2.4,<0.3.0)",
 ]
 
 
