--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -83,4 +83,9 @@ markdown_extensions:
   - attr_list
   - md_in_html
   - tables
-  - pymdownx.superfences
+  - pymdownx.superfences:
+      # make exceptions to highlighting of code:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:mermaid2.fence_mermaid_custom
