--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,7 +48,7 @@ extra:
   homepage: https://trappy-scopes.github.io/trappyscopes/
 
 theme:
-  logo: assets/tsicon.png
+  logo: "assets/tsicon.png"
   name: material
   primary: trappytheme
   palette:
